# nrfx_die_temp_sensor_blocking_example

./: CMakeLists.txt  README.md  prj.conf
src/: main.c
